--- a/Day001_HW.ipynb
+++ b/Day001_HW.ipynb
@@ -37,12 +37,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ans：\n",
-    "#### 檔案：\n",
+    "#### 檔案：",
     "資料會包成檔案提供下載，格式可能包含常用的標準格式，例如「CSV」、「JSON」等等通用的格式，由資料擁有者主動釋出。\n",
-    "#### API：\n",
+    "#### API：",
     "提供程式化的連接的接口，不需要把整批資料事先完整下載回來，由資料擁有者主動釋出。\n",
-    "#### 爬蟲：\n",
+    "#### 爬蟲：",
     "資料沒有以檔案或API提供，利用爬蟲程式，將網頁的資料解析所需的部分，資料擁有者被動公開的。"
    ]
   },
