--- a/HW/Day007_HW.ipynb
+++ b/HW/Day007_HW.ipynb
@@ -35,7 +35,9 @@
   
     "- 不支援資料庫\n",
     "- 需頻繁維護\n",
-    "- 功能上有較多限制"
+    "- 功能上有較多限制\n"
+    "傳統的 HTTP 機制都是一個 Request 搭配一個 Response，如果畫面上一個小改變可能就需要重新發送 Request 並處理 Response。\n",
+    "舉個例子：如果我的畫面上有很多張圖片，但只是想要改變一個小部分，但每次操作都必須全部圖片重新載入。"
    ]
   },
   {
@@ -55,6 +57,7 @@
     "- 執行速度快\n",
     "- 標準程式庫有限\n",
     "- 應於用互動式網頁居多\n",
+    
     "\n",
     "#### Python\n",
     "- 支援網路、桌面應用程式的腳本語言\n",
